# malaria-vs-ads-india-data

./: .gitignore  descriptives.R  formatting.R  generate-version.sh  individual-effect.R  mnm-paper.tex  notes.md  panel.R  utils.R  xsection.R
analysis/: .gitignore  clusters.do  data.R  descriptives.R  formatting.R  individual-effect.R  panel.R  regressions.R  utils.R  xsection.R
analysis/data/: .gitignore  costs.py  download-raw-data.sh  generate_baseline.py  generate_regression_data.py  generate_responses.py  pyproject.toml  utils.py
analysis/data/clusters/: shapes.py
analysis/data/final/: pairs.csv
analysis/data/final/geography/: base-cities.csv  cluster.shp  districts.shx
analysis/data/final/regression-data/: individual-effect.csv  individual.csv
analysis/data/malaria/: treatment_assignment.dta
analysis/data/translation/: db.py  translation.py  variables.py
balance/: cluster-permutations.R
bibs/: digital-ads.bib  experimental-design.bib  extra.bib
data/: generate_regression_data.py  generate_responses.py  generate_shapefiles.py  pipeline.py  translate.sh
pres-uab/: Makefile
tables/: Average Percentage of Family Who Slept Under Bednet.tex  Fever Incidence.tex  Long Sleeve Clothing (Individual Level) - OLS.tex  Malaria Incidence - OLS.tex  Malaria Incidence.tex  Probability of Sleeping Under Bednet.tex  Sleeping Under Bednet (Individual Level) - Logistic Regression (Subset).tex  Sleeping Under Bednet (Individual Level) - Logistic Regression.tex  Sleeping Under Bednet (Individual Level) - OLS (Subset).tex  Sleeping Under Bednet - OLS.tex  foo.tex  (+11 more)
(+14 files in other folders)
